--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="container center">
-    <div class="title">Isabella</div>
+    <div class="title">ISABELLA</div>
     <div class="eventlist">
       <% @events.each do |event| %>
       <div class="row">
