--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>Isabella</title>
     <%= csrf_meta_tags %>
-
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="icon" type="image/png" href="https://i.imgur.com/51FUabu.png">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
