--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 
 @font-face {
   font-family: 'ContourDeLettres';
-  src: url(asset-path('fonts/ContourDeLettres.TTF')) format('truetype');
+  src: asset-url('fonts/ContourDeLettres.TTF') format('truetype');
 }
 
 
